Bug 1617530 - Switch to use StaticMutex in nsAbWinHelper. r=darktrojan

--HG--
extra : rebase_source : 560927d433b527c97a70c70d699018825edb1dc3